# ia_conference_ai_products

./: .gitignore  README.md  pipeline_input.py  pyproject.toml
raw_layer/catalog/: generate_catalog.py
raw_layer/contracts/: input_contract.py  input_contract.yaml
raw_layer/data/catalog/load_reports/: load_report_20250812_032341.csv  load_report_20250812_032341.json  propensao_compra.yaml
raw_layer/data/catalog/metadata_invalid/: metadata_invalid_20250812_032341.json
raw_layer/data/catalog/metadata_valid/: metadata_valid_20250812_032341.json
raw_layer/data/logs/: invalid_records_20250812_032341.csv
raw_layer/data/processed_raw_data/valid/: valid_data_20250812_032341.csv
raw_layer/data/raw_data/: generate_synthetic_dataset.py  raw_data.csv
raw_layer/tests/: test_pipeline_input.py
